# ReduxHelper

./: ARCHITECTURE.md  COMFYUI_SETUP.md  CONTRIBUTING.md  DDS_TEXTURE_WORKFLOW.md  DEVELOPMENT_PLAN.md  EXPORT_GUIDE.md  FAQ.md  OPENROUTER_SETUP.md  PHASES.md  QA_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  RPF_IMPORT_GUIDE.md  SECURITY_NOTES.md  SETUP_GUIDE.md  START_HERE.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.html  package-lock.json  package.json  redux-ai-assistant-2.html
docs/: 00-project-brief.md  01-feature-list.md  02-ui-ux-spec.md  03-architecture.md  04-section-specs.md  05-ai-behavior-rules.md  06-dds-texture-pipeline.md  07-export-system.md  08-roadmap.md  09-implementation-requirements.md  10-ai-agent-build-instructions.md
examples/: example-ai-patch-response.json  example-project.json
prompts/: 00-master-build-prompt.md  01-phase-1-ui-prototype.md  02-phase-2-project-state.md  03-phase-3-file-scanner.md  04-phase-4-ai-integration.md  05-phase-5-patch-diff-export.md  06-phase-6-texture-workflow.md  07-app-ai-system-prompt.md  08-section-prompt-template.md  09-texture-ai-prompt-template.md
schemas/: ai_patch_response.schema.json  export_manifest.schema.json  project.schema.json
src/: App.tsx  main.tsx  styles.css
src-blueprint/: patchApplier.ts  promptBuilder.ts  sectionConfig.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  logging.rs  main.rs  path_safety.rs
src/components/: AiHistoryPanel.tsx  AiSuggestionCard.tsx  AiWorkbench.tsx  AppShell.tsx  DiffViewer.tsx  ErrorBoundary.tsx  ErrorPanel.tsx  (+15 more)
(+90 files in other folders)
