[package]
name = "redux-ai-assistant"
version = "0.1.0"
description = "Redux AI Assistant desktop prototype"
authors = ["Redux AI Assistant"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "redux_ai_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
debug = 0
incremental = false

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
rfd = "0.15"
walkdir = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
